# bayesian_logistic_regression

./: .gitignore  bayes_logistic.py  bayes_probit.py  plot.py  pyproject.toml  utils.py
res/: IS_res.csv
